--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,7 +3,8 @@ use_frameworks!
 platform :ios, '9.0'
 
 target 'DEF_Example' do
-  pod 'DEF', :path => '../'
+  #pod 'DEF', :path => '../'
+   pod 'DEF', :podspec => '../DEF.podspec'
 
   target 'DEF_Tests' do
     inherit! :search_paths
